--- a/导论/习题解答.md
+++ b/导论/习题解答.md
@@ -37,3 +37,6 @@
 
 > 你能想出其他方法来提升强化学习的玩家能力吗？你能想出更好的方法来解决井字棋的问题吗？
 
+*解答：* 由于井字棋小游戏太简单了，可以直接用暴力递归所有可能的走法，并且在每一步都选择已知的可能最优的步子。不过，从强化学习的角度来说，可能的更好的方法包括：
++ 如果对手的棋路是不断变化的，那么根据对手的动作来调整学习率，衰减更长时间之前的策略可能可以加快学习的速度。
++ 如果对手的棋路是固定的，那么探索新的策略并不能够带来更优的收益。这种情况可以考虑保存已知棋局的剧本库，每次遇到相似的情况时，选择“专家”决策认为比较好的动作，这样可以加快智能体学习的过程。
