--- a/时序差分学习/习题解答.md
+++ b/时序差分学习/习题解答.md
@@ -208,3 +208,44 @@ G_t-Q(S_t,A_t)&=R_{t+1}+\gamma G_{t+1}-Q(S_t,A_t)+\gamma Q(S_{t+1},A_{t+1})-\gam
 &=\sum_{k=t}^{T-1}\gamma^{k-t}\delta_k
 \end{align}
 $$
+
+## 练习6.9
+
+
+
+## 练习6.10
+
+
+
+## 练习 6.11
+
+> 为什么 Q 学习被认为是一种离轨策略的控制方法？
+
+*解答：*在 Q 学习的更新公式中，增量部分为 $R+\gamma\max_aQ(S',a)$，其中 $\max_aQ(S',a)$ 是完全根据贪心策略得到的，但在生成采样数据序列时，使用的是某一“从 Q 得到的策略”（例如 $\epsilon$-贪心）而非贪心策略，因此用于生成采样数据序列的策略与用于实际决策的策略是不同的，Q 学习是离轨策略方法。
+
+## 练习6.12
+
+> 假设使用贪心的方式选择动作，那么此时 Q 学习和 Sarsa 是完全相同的算法吗？它们会做出完全相同的动作选择，进行完全相同的权重更新吗？
+
+*解答：*当使用贪心的方式选择动作时，Q 学习与 Sarsa 并不是完全相同的算法。考虑一种特殊情况，在状态 $S$ 下，使用贪心方式选择了动作 $A$，转移到状态 $S'=S$，此时 $Q(S,\cdot)$ 已经被更新，在 Sarsa 算法中，下一步采取的策略是根据更新前的 $Q(S,\cdot)$ 得到的，而在 Q 学习中，下一步采取的策略是根据更新后的 $Q(S,\cdot)$ 得到的。另外，即使是相同的算法，由于算法本身具有随机性，因此并不会做出完全相同的动作选择，当然也不会进行完全相同的权重更新。
+
+## *练习6.13
+
+> 使用 $\epsilon$-贪心目标策略的双期望 Sarsa 的更新步骤是怎样的？
+
+*解答：*
+
+算法参数：步长 $\alpha\in (0,1]$，很小的 $\epsilon$，$\epsilon>0$
+对所有 $s\in S^+$，$a\in \mathcal A(s)$，初始化 $Q_1(s,a)$ 和 $Q_2(s,a)$，其中 $Q(终止状态,\cdot)=0$
+对每幕循环：
+​	初始化 $S$
+​	对幕中每一步循环：
+​		$\pi(a|S)=\begin{cases}1-\epsilon+\frac{\epsilon}{\mathcal A(S)},&\text{if }a=\arg\max_b\big(Q_1(S,b)+Q_2(S,b)\big)\\ \frac{\epsilon}{\mathcal A(S)},&\text{otherwise} \end{cases}$
+​		基于 $Q_1+Q_2$，使用策略 $\pi$ 在 $S$ 中选择 $A$
+​		执行动作 $A$，观察到 $R,S'$
+​		以 $0.5$ 的概率执行：
+​			$Q_1(S,A)\leftarrow Q_1(S,A)+\alpha\big(R+\gamma \sum_a \pi(a|S')Q_2(S',a)-Q_1(S,A) \big)$
+​		或者执行：
+​			$Q_2(S,A)\leftarrow Q_2(S,A)+\alpha\big(R+\gamma \sum_a \pi(a|S')Q_1(S',a)-Q_2(S,A) \big)$
+​		$S\leftarrow S'$
+​	直到 $S$ 是终止状态
