--- a/多臂赌博机/习题解答.md
+++ b/多臂赌博机/习题解答.md
@@ -1,5 +1,8 @@
  # 第二章 多臂赌博机 习题解答
+
+ ## 练习2.1 $\varepsilon$-贪心算法
  
- ## 练习2.1 动作-价值算法
- 
- $\varepsilon$-贪心算法
+> 在$\varepsilon$-贪心动作选择中，对于两个动作且$\varepsilon=0.5$的情况，选择贪婪动作的概率是多少？
+
+*解答：* $\varepsilon$表示采取随机动作的概率，故采取贪婪动作的概率为$1-\varepsilon=0.5$。
+
