--- a/多臂赌博机/习题解答.md
+++ b/多臂赌博机/习题解答.md
@@ -1,8 +1,18 @@
- # 第二章 多臂赌博机 习题解答
+# 第二章 多臂赌博机 习题解答
 
- ## 练习2.1 $\varepsilon$-贪心算法
+## 练习2.1 $\varepsilon$-贪心算法
  
 > 在$\varepsilon$-贪心动作选择中，对于两个动作且$\varepsilon=0.5$的情况，选择贪婪动作的概率是多少？
 
 *解答：* $\varepsilon$表示采取随机动作的概率，故采取贪婪动作的概率为$1-\varepsilon=0.5$。
 
+## 练习2.2 赌博机问题案例
+
+> 考虑有$k=4$个动作（表示为1、2、3和4）的$k$-臂赌博机问题。
+> 对此问题应用$\varepsilon$-贪婪策略选择动作、应用样本均值来估计动作价值、用$Q_1(A)=0$作为初始估计值。
+> 假设动作和奖励的初始序列为$A_1=1$，$R_1=-1$，$A_2=2$，$R_2=1$，$A_3=2$，$R_3=-2$，$A_4=2$，$R_4=2$，$A_5=3$，$R_5=0$。
+> 在这段时间中的一些时间点上，$\varepsilon$情况可能已经发生，导致随机选择动作。这肯定发生在哪个时间点？这种情况可能发生在哪些时间点？
+
+*解答：* $A_4$和$A_5$肯定是随机选择，而$A_1$、$A_2$和$A_3$可能是随机选择的。
+因为在$t=4$时刻，$Q_4(A_2)=\frac{1+(-2)}{2}=-0.5<0=Q_4(A_4)$，,贪心策略下不可能在该时刻选择动作2，故此时是随机选择的动作2；
+在$t=5$时刻，$Q_4(A_2)=\frac{1+(-2)+(2)}{3}=0.33>0$，且其他动作的估计价值都不大于0，贪心策略下必须选择动作2，故此时是随机选择的动作3。
