--- a/多臂赌博机/习题解答.md
+++ b/多臂赌博机/习题解答.md
@@ -27,7 +27,8 @@
 设操作种类为$K$，总共操作数为$M$，假设$M$足够大（即长期操作），累计回报$R_{sum}$和选择最佳操作的概率$p_{best}$可由如下公式得：
 
 $$
-R_sum=M\times(Q_{best}(A) + \varepsilon\times(Q_{random}(A)-Q_{best}(A))) \\
+R_{sum}=M\times(Q_{best}(A) + \varepsilon\times(Q_{random}(A)-Q_{best}(A))) \\
+
 p_{best}=1-\frac{\varepsilon}{K}
 $$
 
