--- a/多臂赌博机/习题解答.md
+++ b/多臂赌博机/习题解答.md
@@ -41,3 +41,9 @@ $$
 > 就步长参数序列而言，一般情况下(类似于(2.6))每个先前奖励的权重是多少？
 
 *解答：* 
+
+## 练习2.5 编程练习
+> 设计并进行一个实验来证明样本均值法对于非平衡问题的困难。使用10-臂赌博机问题的修改版本，
+> 其中所有的q(a)一开始是相同的，然后进行独立的随机游走（例如，将均值为0且标准差为0.01的正态分布增量
+> 添加到每一步上的所有q(a)。使用递增计算的样本均值来进行一个动作-价值方法，并使用恒定步长参数\alpha=0.1
+> 的另一种动作-价值方法，并为他自准备如图2.2所示的曲线图。使用\varepsilon=0.1和更长的运行，比如100000步。
