修改练习1答案

--- a/多臂赌博机/习题解答.md
+++ b/多臂赌博机/习题解答.md
@@ -4,7 +4,10 @@
  
 > 在$\varepsilon$-贪心动作选择中，对于两个动作且$\varepsilon=0.5$的情况，选择贪婪动作的概率是多少？
 
-*解答：* $\varepsilon$表示采取随机动作的概率，故采取贪婪动作的概率为$1-\varepsilon=0.5$。
+*解答：* $\varepsilon$表示采取随机动作的概率，$K$表示动作数（$K=2$）。
+首先采取贪婪动作的概率为$1-\varepsilon=0.5$。其次因为$\varepsilon$的
+概率从所有动作中随机挑选，也有$\frac{\varepsilon}{K}$的概率选中最优的
+动作。所以采取贪婪动作的概率为$(1-\varepsilon)+\frac{\varepsilon}{K}=0.75$
 
 ## 练习2.2 赌博机问题案例
 
