pre work for 4.3

--- a/动态规划/习题解答.md
+++ b/动态规划/习题解答.md
@@ -1,5 +1,7 @@
 # 第四章 动态规划 习题解答
 
+## -策略评估-
+
 **例 4.1** 考虑下方的一个$4×4$的网络图。
 
 <img src="img/pic4-1.png" alt="图片4-1" style="zoom: 50%;" />
@@ -75,5 +77,60 @@ $$
 $$
 q_{k + 1}(s, a) = \sum_{s',r}p(s',r|s,a)[r + \gamma \sum_{a'}\pi(a'|s')q_{k}(s',a')]
 $$
+
+## -策略迭代-
+
+**例 4.2 杰克租车问题** 杰克管理一家有两个地点的租车公司。每一天，一些用户会到一个地点租车。如果杰克有可用的汽车，便会将其租出，并从全国总公司哪里获得10美元的收益。如果他在那个地点没有汽车，便会失去这一次业务。租出去的汽车在还车的第二天变得可用。为了保证每辆策划在需要的地方使用，杰克在夜间在两个地点之间移动车辆，移动每辆车的代价为2美元。我们假设每个地点租车与还车的数量是一个泊松随机变量，即数量为$n$的概率为$\frac{\lambda^{n}}{n!}e^{-\lambda}$，其中$\lambda$是期望值。假设租车的$\lambda$在两个地点分别为3和4，而还车的$\sigma$分别是3和2。为了简化问题，我们假设任何一个地点有不超过20辆车（即额外的车会被直接退到全国总公司，所以在这个问题中就意味着自动消失），并且每天最多移动5辆车。我们令折扣$\gamma = 0.9$，并将它描述为一个持续的有限MDP，其中时刻按天计算，状态为每天结束时每个地点的车辆数，动作则为夜间在两个地点间移动的车辆数。下图显示了策略迭代的策略序列，该策略从不移动任何车辆开始。
+
+<img src="img/pic4-3.png" alt="图片4-3" style="zoom:67%;" />
+
+在杰克租车问题中，策略迭代得到的策略序列以及最终的状态价值函数。前五幅图显示了在一天结束时，在每种状态下（即两地分别的车辆数），从第一地点移动到第二地点的车辆数（负数表示从第二地点转移到第一地点），即采取的动作。每个后继策略都是对之前的策略的严格改进，并且最后的策略是最优的。
+
+---
+
+**算法（使用迭代策略评估），用于估计$\pi \approx \pi_*$**
+
+1. 初始化
+
+   对$s \in S$，任意设定$V(s) \in \mathbb{R}$以及$\pi(s) \in A(s)$
+
+2. 策略评估
+
+   循环：
+
+   ​			$\Delta \gets 0$
+
+   ​			对每一个$s \in S$循环：
+
+   ​						$v \gets V(s)$
+
+   ​						$V(s) \gets \sum_{s',r}p(s',r|s,\pi(s))[r + \gamma V(s')]$
+
+   ​						$\Delta \gets max(\Delta, |v - V(s)|)$
+
+   ​			直到$\Delta < \theta$（一个决定估计精度的小正数）
+
+3. 策略改进
+
+   $policy\_stable \gets true$
+
+   对每一个$s \in S$:
+
+   ​			$old\_action \gets \pi(s)$
+
+   ​			$\pi(s) \gets argmax_a\sum_{s',r}p(s',r|s,a)[r + \gamma V(s')]$
+
+   ​			如果$old\_action \neq \pi(s)$，那么$policy\_stable \gets false$
+
+   如果$policy\_stable$为$true$，那么停止并返回$V \approx v_*$以及$\pi \approx \pi_*$；否则跳转到2
+
+## 练习4.4
+
+> 上面这个策略迭代算法存在一个小问题，即如果在两个或多个同样好的策略之间不断切换，则它可能永远不会终止。所以上面的算法对于教学没有问题，但不适用于实际应用。请修改伪代码以保证其收敛。
+
+*解答：*存在的问题是$argmax_a$将终止条件限制，因为在伪代码中的**策略改进**中，同样的价值函数可能会产生不同的策略，导致两个或多个同样好的策略在迭代前后不断切换，价值函数没有提升，但是$old-action \neq \pi(s)$，仍然会使程序跳转至`2`继续运行。
+
+
+
 
 
