complete ex4.4,ex4.5

--- a/动态规划/习题解答.md
+++ b/动态规划/习题解答.md
@@ -171,3 +171,65 @@ $$
    ​			如果$old\_action \neq \pi(s)$并且$old\_max\_action\_set \neq maxActionSet(s)$，那么$policy\_stable \gets false$
    
    如果$policy\_stable$为$true$，那么停止并返回$V \approx v_*$以及$\pi \approx \pi_*$；否则跳转到2
+
+## 练习4.5
+
+> 如何为动作价值定义策略迭代？请用类似这里给出的关于$v_*$的算法写出关于$q_*$的完整算法。请特别注意这个练习，因为本书其它部分会使用到这个算法。
+
+1. 初始化
+
+   对$s \in S, \ a\in A(s)$，任意设定$Q(s, a)$以及$\pi(s, a)$
+
+2. 策略评估
+
+   循环：
+
+   ​			$\Delta \gets 0$
+
+   ​			对每一个$s \in S, a \in A(s)$循环：
+
+   ​						$q \gets Q(s, a)$
+
+   ​						$Q(s, a) \gets \sum_{s',r}p(s',r|s,a)[r + \gamma \sum_{a'}\pi(a'|s')q_{\pi}(s',a')]$
+
+   ​						$\Delta \gets max(\Delta, |v - V(s)|)$
+
+   ​			直到$\Delta < \theta$（一个决定估计精度的小正数）
+
+3. 策略改进
+
+   $policy\_stable \gets true$
+
+   对每一个$s \in S$:
+
+   ​			$old\_action \gets \pi(s)$
+
+   ​			$\pi(s) \gets argmax_a\sum_{s',r}p(s',r|s,a)[r + \gamma V(s')]$
+
+   ​			如果$old\_action \neq \pi(s)$，那么$policy\_stable \gets false$
+
+   如果$policy\_stable$为$true$，那么停止并返回$V \approx v_*$以及$\pi \approx \pi_*$；否则跳转到2
+
+## 练习4.6
+
+> 假设只能考虑$\epsilon-柔性$策略，即在每个状态$s$中选择每个动作的概率至少为$\epsilon / |A(s)|$。请定性描述在$v_*$的策略迭代算法中，步骤3、步骤2、步骤1所需的更改。
+
+步骤1-初始化中的更改：
+
+只需要将确定的策略$\pi(s), \pi(s) \in A(s)$，改为随机的策略$\pi(a|s), s\in S, a \in A(s)$。
+
+步骤2-策略评估中的更改：
+
+将贝尔曼更新改为$V(s) \gets \sum_{a \in A(s)}\pi(a|s)\sum_{s',r}p(s',r|s,a)[r + \gamma V(s')]$
+
+步骤3-策略改进中的更改：
+
+将$\pi(s) \gets argmax_a\sum_{s',r}p(s',r|s,a)[r + \gamma V(s')]$改为以下：
+$$
+\pi(a|s)=\left\{
+\begin{aligned}
+& \epsilon/|A| + 1 - \epsilon \ &if \ a^* = argmax_a\sum_{s',r}p(s',r|s,a)[r + \gamma V(s')]\\
+& \epsilon/|A|  & 其它\\
+\end{aligned}
+\right.
+$$
